--- a/css/main.css
+++ b/css/main.css
@@ -349,3 +349,73 @@ p {
 
 
 /*contact area*/
+
+.contact-page {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    gap: 20px;
+}
+
+.con-head {
+    position: relative;
+    left: 255px;
+}
+
+.con-head h3 {
+    font-size: 35px;
+}
+
+.contact-info {
+    margin: auto;
+    background-color: var(--white);
+    width: 800px;
+    height: auto;
+    display: flex;
+    justify-content: space-around;
+    float: right;
+    padding: 50px;
+}
+
+.contact-page {
+    margin: 150px 0 0 0;
+}
+
+.con-info {
+    margin: 0 0 0 -100px;
+}
+
+.con-info i {
+    color: var(--green-color);
+    margin-right: 10px;
+}
+
+.con-info p {
+    font-size: 18px;
+}
+
+
+/*contact form*/
+
+.con-message label {
+    font-size: 25px;
+}
+
+.con-message #con-input {
+    padding: 10px;
+    width: 370px;
+    margin: 0 0 30px 0;
+    border: 1px solid rgba(225, 225, 225, .8);
+}
+
+.contact-page textarea {
+    border: 1px solid rgba(225, 225, 225, .8);
+}
+
+.contact-info button {
+    padding: 15px;
+    width: 120px;
+    background-color: var(--green-color);
+    border-radius: 5px;
+    margin: 20px 0 0 0;
+    color: var(--white);
+}
