--- a/css/responsive.css
+++ b/css/responsive.css
@@ -51,10 +51,10 @@
         right: 65px;
     }
     .foot-info-1 {
-        margin: 0 0 0 280px;
+        margin: auto;
     }
     .foot-info-3 {
-        margin: 0 220px 0 0;
+        margin: auto;
     }
     .foot-area {
         padding: 50px 0 100px 0;
