--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@
 
 .nav-list {
     display: flex;
+    margin: 0 0 0 260px;
 }
 
 .nav-list a {
@@ -20,7 +21,7 @@
 .top-contact {
     display: flex;
     margin-right: 20px;
-    margin: 3px 0 0 0;
+    margin: 0 270px 0 0;
 }
 
 .top-contact p {
@@ -421,7 +422,7 @@
     align-items: center;
     justify-content: center;
     text-align: center;
-    margin: 0 0 -80px 50px;
+    margin: auto;
 }
 
 .banner {
@@ -865,7 +866,7 @@ footer {
     color: var(--white);
     width: 130px;
     border-radius: 5px;
-    margin: 20px 0 0 150px;
+    margin: auto;
 }
 
 .foot-area p {
@@ -961,4 +962,11 @@ footer {
     text-align: center;
     font-size: 18px;
     color: var(--white);
+    margin: 10px;
+}
+
+footer hr {
+    height: 2px;
+    background-color: rgba(225, 225, 225, 0.2);
+    border: none;
 }
