responsice css to all pages

--- a/css/main.css
+++ b/css/main.css
@@ -113,7 +113,8 @@
 .shop {
     display: grid;
     grid-template-columns: 2fr 1fr;
-    gap: 50px;
+    gap: 10px;
+    margin: auto;
 }
 
 .shop-product {
