--- a/css/style.css
+++ b/css/style.css
@@ -72,12 +72,15 @@
 .menu-bars {
     display: none;
 }
+
 .close {
     display: none;
 }
-.nav-link hr{
+
+.nav-link hr {
     display: none;
 }
+
 .cart-area {
     margin-right: 20px;
 }
@@ -127,7 +130,18 @@
     margin: 30px 0 0 120px;
     color: var(--white);
     cursor: pointer;
+    font-size: 20px;
 }
+
+
+/*.fa-chevron-up {
+    position: absolute;
+    margin: 20px 0 0 780px;
+    color: var(--white);
+    cursor: pointer;
+    font-size: 20px;
+    display: none;
+}*/
 
 .dropdown h3 {
     position: absolute;
@@ -141,7 +155,7 @@
     height: 300px;
     background-color: var(--white);
     margin: -17px 0 0 80px;
-    position: relative;
+    position: absolute;
     border-radius: 0 0 5px 5px;
     transition: 3ms;
 }
