--- a/css/responsive.css
+++ b/css/responsive.css
@@ -16,6 +16,9 @@
     .third-product-area {
         margin: 100px 0 0 0;
     }
+    .screach {
+        display: flex;
+    }
     /*post area*/
     .post-head h2 {
         margin: 30px 0 20px 350px;
@@ -209,15 +212,19 @@
         display: block;
         padding: 20px;
         margin: auto;
-    }
-<<<<<<< HEAD
-    .setext {
-=======
-    .setext{
->>>>>>> b1af1190e77ac34eb273ab177a191654e06afebc
-        padding-right: 380px;
-        margin: 0 0 0 -40px;
         width: auto;
+    }
+    .se-text {
+        padding: auto;
+        margin: auto;
+        width: -webkit-fit-container;
+    }
+    .category-area {
+        margin: auto;
+        margin-top: 20px;
+    }
+    .scat {
+        width: fit-content;
     }
     .dropdown input {
         padding: auto;
@@ -237,6 +244,10 @@
         position: absolute;
         margin-top: 22px;
         left: 230px;
+    }
+    .fa-magnifying-glass {
+        width: fit-content;
+        margin: auto;
     }
     .search-area .fa-chevron-down {
         position: absolute;
@@ -473,17 +484,16 @@
         margin-top: 20px;
     }
     .scat {
-        width: -webkit-fill-available;
         margin: auto;
         margin-right: 50px;
         margin-top: 20px;
     }
-    .fa-magnifying-glass {
+    /*.fa-magnifying-glass {
         position: relative;
         top: -62px;
         right: -310px;
         width: auto;
-    }
+    }*/
     .products {
         margin: auto;
     }
@@ -544,5 +554,72 @@
     .about-info {
         width: 650px;
         margin: auto;
+    }
+}
+
+@media only screen and (max-width: 499px) {
+    .top-contact {
+        flex-wrap: wrap;
+    }
+    .p-list-1 {
+        margin: auto;
+    }
+    .product-head {
+        width: fit-content;
+        justify-content: center;
+    }
+    .product-head h2 {
+        margin-left: 130px;
+        font-size: 22px;
+        width: 200px;
+        justify-content: center;
+    }
+    .product-head button {
+        position: relative;
+        margin-right: 150px;
+        margin-bottom: 20px;
+        width: 300px;
+        float: left;
+    }
+    .add-info {
+        margin: auto;
+        width: auto;
+        border-bottom: none;
+    }
+    .add-info h2 {
+        font-size: 25px;
+    }
+    .add-info p {
+        font-size: 15px;
+    }
+    .add-img {
+        width: auto;
+        border-top: none;
+    }
+    .add-img img {
+        margin: auto;
+        width: -webkit-fill-available;
+    }
+    .about-section {
+        width: auto;
+        padding: 10px;
+        margin: auto;
+    }
+    .about {
+        width: auto;
+    }
+    .about-info {
+        width: fit-content;
+    }
+    .about-adds.about-2 {
+        width: fit-content;
+        margin: auto;
+        margin-bottom: 120px;
+    }
+    .abt-search {
+        width: auto;
+    }
+    .about-search.about-sh-bar {
+        width: max-content;
     }
 }
