--- a/css/main.css
+++ b/css/main.css
@@ -412,11 +412,16 @@ p {
 
 /*contact form*/
 
-.con-message label {
+.con-form label {
     font-size: 25px;
 }
 
-.con-message #con-input {
+.con-form {
+    border: 1px solid #bbb;
+    padding: 20px;
+}
+
+.con-form #con-input {
     padding: 10px;
     width: 370px;
     margin: 0 0 30px 0;
